v0.8.34 Fix navbar position on the basket page
Due to the navbar position being sticky (so kinda like absolute) the has no actual height that affects other elements. Therefore, content needs to have extra padding on top

--- a/src/main/resources/static/styles/basket.css
+++ b/src/main/resources/static/styles/basket.css
@@ -13,7 +13,8 @@
     justify-content: center;
     align-items: center;
     min-height: 64vh;
-    margin: 5vh 0;
+    padding-top: 10vh;
+    margin-bottom: 5vh;
 }
 
 #basketContainer
